the login awakens

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/jakeherold/blog.git"
   },
-
+  {"engines":"4.x"},
   "author": "",
 
   "license": "ISC",
